--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,22 @@
 {
   "version": 2,
+  "buildCommand": "",
+  "devCommand": "",
+  "installCommand": "",
+  "public": true,
+  "outputDirectory": "",
+  "github": {
+    "silent": true
+  },
+  "analytics": {
+    "enabled": true
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ],
   "builds": [
     {
       "src": "**/*",
